# rust-video-downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE copy  README.md  auth.toml.example  config.example.toml  rvd.toml.example
.github/: RELEASE_GUIDE.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  MIGRATION.md  README.md
e2e_test_platform/: Makefile  README.md  config.yaml  run_test_suite.py  run_tests.py
e2e_test_platform/core/: __init__.py  base_test.py  config.py  result.py
e2e_test_platform/reporters/: base.py  html_reporter.py
e2e_test_platform/tests/: test_template.py.example
e2e_test_platform/tests/core/: test_config.py  test_error_handling.py  test_http_client.py
e2e_test_platform/utils/: __init__.py
e2e_test_platform/validators/: __init__.py  content.py  file.py
rvd_next/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml
rvd_next/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  MIGRATION.md  README.md  USER_GUIDE.md
rvd_next/e2e_test_platform/: .gitignore  README.md  SUMMARY.md  config.yaml
rvd_next/e2e_test_platform/core/: base_test.py  config.py  loader.py  runner.py
rvd_next/e2e_test_platform/datas/: urls.yaml
rvd_next/e2e_test_platform/reporters/: __init__.py  console.py  json_reporter.py
rvd_next/e2e_test_platform/tests/: test_batch_download.py  test_chapters.py  test_danmaku.py  test_error_handling.py  test_quality_selection.py  test_single_video.py  test_subtitle.py
rvd_next/e2e_test_platform/tests/core/: test_config.py  test_downloader.py  test_muxer.py  test_output_template.py  test_temp_files.py
rvd_next/e2e_test_platform/utils/: file_utils.py  logger.py  process.py
rvd_next/e2e_test_platform/validators/: base.py  file.py  output.py
rvd_next/src/: error.rs  lib.rs  main.rs
rvd_next/src/app/: mod.rs  orchestrator.rs
rvd_next/src/auth/: login.rs  qrcode.rs  storage.rs  types.rs
rvd_next/src/auth/providers/: bilibili.rs
rvd_next/src/cli/: mod.rs
rvd_next/src/core/: danmaku.rs  downloader.rs  mod.rs  muxer.rs  progress.rs  subtitle.rs
rvd_next/src/platform/: selector.rs  testing.rs  trait.rs
rvd_next/src/platform/bilibili/: cdn.rs  client.rs  mod.rs  parser.rs  platform.rs
rvd_next/src/utils/: config.rs  console.rs  http.rs  mod.rs
src/: error.rs  lib.rs  main.rs  types.rs
src/app/: orchestrator.rs  registry.rs
src/auth/: login.rs  mod.rs  qrcode.rs  storage.rs  types.rs
src/auth/providers/: bilibili.rs  mod.rs
src/cli/: mod.rs
src/core/: danmaku.rs  downloader.rs  mod.rs  muxer.rs  subtitle.rs
src/platform/: metadata.rs  mod.rs  testing.rs  trait.rs
src/platform/bilibili/: api.rs  app_sign.rs  auth.rs  cdn.rs  client.rs  mod.rs  parser.rs  selector.rs  wbi.rs
src/utils/: config.rs  console.rs  file.rs  http.rs  mod.rs
tests/: README.md  auth_bilibili_test.rs  auth_integration_test.rs  auth_login_test.rs  auth_qrcode_test.rs  auth_storage_test.rs  auth_test.rs  cli_test.rs  core_aria2c_test.rs  core_chapter_test.rs  core_danmaku_test.rs  e2e_download_test.rs  integration_test.rs  platform_bilibili_test.rs  run_tests.sh  utils_config_test.rs  utils_file_test.rs
