[package]
name = "rvd"
version = "1.0.0"
edition = "2021"
authors = ["RVD Contributors"]
description = "A modular video downloader written in Rust"
license = "MIT"
repository = "https://github.com/SpenserCai/rust-video-downloader"
keywords = ["video", "downloader", "bilibili", "cli"]
readme = "README.md"

[lib]
name = "rvd"
path = "src/lib.rs"

[[bin]]
name = "rvd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
# Use rustls-tls for better static compilation support (especially for musl)
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "rustls-tls"], default-features = false }

# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Progress bar
indicatif = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1.10"

# Random number generation
rand = "0.9"

# Compression (for manual gzip decompression if needed)
flate2 = "1.0"

# Async trait
async-trait = "0.1"

# URL parsing
url = "2.5"

# Futures utilities
futures = "0.3"

# Directory utilities
dirs = "6.0"

# Interactive prompts
dialoguer = "0.12"

# Cryptography
md5 = "0.8"

# XML processing
quick-xml = "0.31"

# QR code generation
qrcode = "0.14"
image = "0.25"

# Windows console support (UTF-8 and ANSI)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }
nu-ansi-term = "0.50"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
